--- a/FlySolo/pubspec.yaml
+++ b/FlySolo/pubspec.yaml
@@ -48,9 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets
-  #   - assets/hello.png
+  assets:     
+         - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -73,6 +72,9 @@ flutter:
     - family: Cinzel
       fonts:
         - asset: fonts/Cinzel-VariableFont_wght.ttf
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
