--- a/FlySolo/pubspec.yaml
+++ b/FlySolo/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  datetime_picker_formfield: ^2.0.0  
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
