--- a/FlySolo/pubspec.yaml
+++ b/FlySolo/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   datetime_picker_formfield: ^2.0.0  
+  syncfusion_flutter_calendar: ^18.4.46
 
 
 # For information on the generic Dart part of this file, see the
